# .track

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: settings.json
src/agent_track/: __init__.py  __main__.py  cli.py  launch.py
src/agent_track/analysis/: __init__.py  coverage.py  duplicates.py  graph.py  security.py  symbol_graph.py  ticket_gen.py  verify.py  watcher.py
src/agent_track/analysis/parsers/: python_parser.py
src/agent_track/dashboard/: __init__.py  api.py  graph.js  helpers.py  render.py  script.js  server.py  style.css
src/agent_track/data/: CLAUDE.md.example  CONVENTIONS.md
src/agent_track/hooks/: drift.py  post_tool_use.py  pre_tool_use.py  router.py  session_end.py  session_start.py  tasks.py
src/agent_track/services/: __init__.py  commands.py  frontmatter.py  models.py  paths.py  utils.py
tests/: test_agent_overlay.py  test_cli.py  test_dashboard_graph.py  test_dashboard_hooks.py  test_dashboard_launch.py  test_frontmatter.py  test_launch.py  test_models.py
tests/test_analysis/: test_analyze_command.py  test_coverage.py  test_duplicates.py  test_graph_assembly.py  test_python_parser.py  test_security.py  test_symbol_graph.py  test_ticket_gen.py  test_verify.py  test_watcher.py
tests/test_hooks/: test_drift.py  test_init.py  test_locks.py  test_post_tool_use.py  test_pre_tool_use.py  test_router.py  test_session_end.py  test_session_start.py  test_tasks.py
