[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-track"
version = "0.1.0"
description = ".track — lightweight ticketing & agent coordination for multi-agent coding workflows"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Enes Kaya" }
]
keywords = ["cli", "ticketing", "agents", "coordination", "kanban", "multi-agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Bug Tracking",
]

[project.scripts]
track = "agent_track.cli:main"

[project.urls]
Homepage = "https://github.com/ekaya97/.track"
Repository = "https://github.com/ekaya97/.track"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.8",
]
